Add PutImage
